src/index.css
@import url('https://fonts.googleapis.com/css?family=Bitter');

:root{
  --background-color: #0a0a0b;
  --selected-color: #ac80a0;
  --name-accent-color: #a9cef4;
  --second-accent-color: #046b9f;
  font-weight: normal;
}

body {
  margin-left: 1%;
  margin-right: 1%;
  font-family: 'Bitter';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--background-color);
  color: white;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

h1, h2, h3 {
  font-weight: normal;
}

h3 {
  color: var(--selected-color)
}

header {
  display: flex;
  justify-content: space-between;
}

header ul {
  list-style-type: none;
  margin-block-start: 0.67em;
  margin-block-end: 0.67em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

header li {
  float: left;
  font-size: 2em;
  padding: .3em;
  margin-top: 1px;
}

header li a {
  display: block;
  color: white;
  text-align: center;
  text-decoration: none;
}

.true {
  color: var(--selected-color);
}

header h1 {
  color: var(--name-accent-color);
  font-weight: normal;
}

nav {
  display: flex;
}

.contactDiv {
  display: flex;
  flex-wrap: wrap;
  text-align: center;
}

.contactDiv h1 {
  width: 100%;
}

.contactDiv div {
  padding: 8px;
  display: flex;
  justify-content: space-between;
}

label {
  margin-right: 10px;
  font-size: 20px;
}

form {
  text-align: center;
  margin: 0 auto;
  padding: 25px;
}

div input {
  width: 250px;
  font-family: 'Bitter';
}

span {
  color: var(--name-accent-color)
}

textarea {
  font-family: 'Bitter';
}

#contactButton {
  font-family: 'Bitter';
  padding: 4px;
  padding-right: 15px;
  padding-left: 15px;
  margin: 8px;
}

.selected {
  color: var(--selected-color);
  font-size: 2em;
  width: 100%;
  text-align: center;
}

.aboutMainDiv {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 50px;
}

.aboutMainDiv h1 {
  text-align: center;
}

.aboutSecondaryDiv {
  display: flex;
  justify-content: space-between;
}

.aboutLeft {
  padding: 15px;
  padding-right: 70px;
}

.aboutRight {
  padding: 10px 85px;
}

.aboutRight img {
  width: 550px;
  height: auto;
}

.resumeMainDiv {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  text-align: center;
}

.resumeMainDiv li {
  margin-top: 20px;
}

.frontEndDiv {
  margin: 0 auto;
}

.frontEndDiv ul {
  text-align: left;
  list-style: none;
}

.backEndDiv {
  margin: 0 auto;
}

.backEndDiv ul {
  text-align: left;
  list-style: none;
}

footer {
  display: flex;
  flex-wrap: wrap;
  text-align: center;
}

footer img {
  width: 3%;
  height: auto;
}

.socials a {
  padding: 1%
}

.copyright {
  margin: 1% auto;
  display: inline-block;
  font-size: large;
}

.projectMainDiv {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  text-align: center;
}

.projectMainDiv h1 {
  width: 100%;
  text-align: center;
}

.projectMainDiv a {
  text-decoration: none;
  color: var(--second-accent-color)
}

.projectMainDiv img {
  width: 35%;
  height: auto;
}

#resume {
  text-decoration: none;
  color: var(--second-accent-color);
}

